--- a/app/src/main/res/layout/activity_conf_start_duel.xml
+++ b/app/src/main/res/layout/activity_conf_start_duel.xml
@@ -7,11 +7,50 @@
     android:background="@drawable/fondecranduel"
     tools:context=".ConfStartDuel_activity" >
 
-    <include
-        layout="@layout/form_conf_duel"
-        android:layout_width="286dp"
-        android:layout_height="472dp"
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".85"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="82dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <include
+            layout="@layout/form_conf_duel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="82dp" />
+
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/id_conf_duel_bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/design_default_color_primary_dark"
+            app:itemIconTint="@menu/bottom_navigation_color"
+            app:itemTextColor="@menu/bottom_navigation_color"
+            app:menu="@menu/bottom_navigation_bar" />
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
