--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,11 +7,24 @@
     android:background="@drawable/fondecranduel"
     tools:context=".Home">
 
-    <include
-        layout="@layout/form_menu_home"
-        android:layout_width="326dp"
-        android:layout_height="479dp"
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="83dp" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/id_home_bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/design_default_color_primary_dark"
+            app:itemIconTint="@menu/bottom_navigation_color"
+            app:itemTextColor="@menu/bottom_navigation_color"
+            app:menu="@menu/bottom_navigation_bar" />
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
