--- a/app/src/main/res/layout/list_view_deck.xml
+++ b/app/src/main/res/layout/list_view_deck.xml
@@ -9,11 +9,30 @@
         android:id="@+id/title_listdeck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/title_listDeck"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:onClick="onClickAdd"
+            app:backgroundTint="@color/colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_add" />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/id_lv_listDeck"
@@ -28,39 +47,5 @@
         app:layout_constraintVertical_bias="0.0">
 
     </ListView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/bt_return"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="@android:dimen/app_icon_size"
-            android:layout_weight="1"
-            android:onClick="onClickReturn"
-            android:text="@string/bt_return"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="166dp"
-            android:layout_height="208dp"
-            android:layout_marginStart="@android:dimen/app_icon_size"
-            android:layout_marginTop="@android:dimen/app_icon_size"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:onClick="onClickAdd"
-            app:backgroundTint="@color/colorPrimary"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_add" />
-
-    </LinearLayout>
 
 </LinearLayout>
