MAJ Menu deck et internationalisation français

--- a/app/src/main/res/layout/form_login.xml
+++ b/app/src/main/res/layout/form_login.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/titile_login"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/ET_Name"
         android:layout_width="match_parent"
@@ -52,7 +61,7 @@
         android:text="@string/bt_login_text" />
 
     <Button
-        android:id="@+id/bt_to_sign_in"
+        android:id="@+id/bt_to_sign_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="OnClickToSignIn"
