--- a/app/src/main/res/layout/form_sign_up.xml
+++ b/app/src/main/res/layout/form_sign_up.xml
@@ -7,6 +7,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/title_signup"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/ET_userneame_SignUp"
         android:layout_width="wrap_content"
