--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#098500</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B47</color>
-    <color name="blue">#0066ff</color>
+    <color name="blue">#0066FF</color>
     <color name="red">#cc0000</color>
     <color name="black">#000000</color>
     <color name="colorAccentDark">#4aa87a</color>
