--- a/app/src/main/res/layout/activity_menu_deck_list.xml
+++ b/app/src/main/res/layout/activity_menu_deck_list.xml
@@ -11,6 +11,7 @@
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="50dp"
         app:layout_constraintBottom_toTopOf="@+id/container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent=".85"
@@ -19,14 +20,11 @@
 
         <include
             layout="@layout/list_view_deck"
-            android:layout_width="match_parent"
-            android:layout_height="582dp"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </FrameLayout>
 
