--- a/app/src/main/res/layout/terrainbanjoueur.xml
+++ b/app/src/main/res/layout/terrainbanjoueur.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -11,35 +10,24 @@
         android:layout_weight="0.5">
 
         <ImageView
-            android:id="@+id/iv_cimetiere_joueur"
+            android:id="@+id/iv_bannisement_joueur"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/caseterrain" />
 
     </RelativeLayout>
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.5">
+        android:layout_weight="0.5" >
 
         <ImageView
-            android:id="@+id/iv_deckPlayer"
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="clickHandler"
-            app:srcCompat="@drawable/cardcover" />
-
-        <TextView
-            android:id="@+id/tv_nbDeckCardsPlayer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="40"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
-
+            android:visibility="invisible"
+            app:srcCompat="@android:drawable/screen_background_light_transparent" />
     </RelativeLayout>
-
 
 </LinearLayout>
