--- a/app/src/main/res/layout/game_relative_layout.xml
+++ b/app/src/main/res/layout/game_relative_layout.xml
@@ -19,17 +19,29 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_cardView"
+                android:id="@+id/iv_cardViewZoom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/cardcover" />
 
-            <TextView
-                android:id="@+id/tv_descCard"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="TextView"
-                android:textColor="@color/common_google_signin_btn_text_dark_default" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_descCardZoom"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/common_google_signin_btn_text_dark_default" />
+                </LinearLayout>
+            </ScrollView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -56,60 +68,70 @@
                         android:id="@+id/iv_mainIA_8"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_6"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_4"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_3"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_7"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_9"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
 
                     <ImageView
                         android:id="@+id/iv_mainIA_10"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
                         android:layout_weight="1" />
                 </LinearLayout>
 
