--- a/app/src/main/res/layout/game_relative_layout.xml
+++ b/app/src/main/res/layout/game_relative_layout.xml
@@ -21,12 +21,14 @@
             <ImageView
                 android:id="@+id/iv_cardViewZoom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.50"
                 app:srcCompat="@drawable/cardcover" />
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_weight="0.50">
 
                 <LinearLayout
                     android:layout_width="match_parent"
