invocation normale non fini

--- a/app/src/main/res/layout/game_relative_layout.xml
+++ b/app/src/main/res/layout/game_relative_layout.xml
@@ -25,6 +25,21 @@
                 android:layout_weight="0.50"
                 app:srcCompat="@drawable/cardcover" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.8"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="onClickInvocation"
+                    android:text="@string/bt_invocation" />
+            </LinearLayout>
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
