--- a/app/src/main/res/layout/terraincentrejoueur.xml
+++ b/app/src/main/res/layout/terraincentrejoueur.xml
@@ -26,7 +26,8 @@
                     android:id="@+id/iv_terrainMonstre1_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -39,7 +40,8 @@
                     android:id="@+id/iv_terrainMonstre2_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -51,7 +53,8 @@
                     android:id="@+id/iv_terrainMonstre3_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -64,7 +67,8 @@
                     android:id="@+id/iv_terrainMonstre4_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -77,7 +81,8 @@
                     android:id="@+id/iv_terrainMonstre5_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -106,7 +111,8 @@
                     android:id="@+id/iv_terrainMagie1_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -119,7 +125,8 @@
                     android:id="@+id/iv_terrainMagie2_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -132,7 +139,8 @@
                     android:id="@+id/iv_terrainMagie3_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -145,7 +153,8 @@
                     android:id="@+id/iv_terrainMagie4_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
@@ -158,7 +167,8 @@
                     android:id="@+id/iv_terrainMagie5_joueur"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/caseterrain" />
+                    app:srcCompat="@drawable/caseterrain"
+                    android:onClick="clickHandler" />
 
             </RelativeLayout>
 
