add crossed sort on list of card when build a deck

--- a/app/src/main/res/values/array_sort.xml
+++ b/app/src/main/res/values/array_sort.xml
@@ -3,7 +3,7 @@
     <string-array name="array_sort">
         <item>All</item>
         <item>Monster</item>
-        <item>Magic</item>
+        <item>Spell</item>
         <item>Trap</item>
     </string-array>
 </resources>
