--- a/app/src/main/res/layout/form_deck_builder.xml
+++ b/app/src/main/res/layout/form_deck_builder.xml
@@ -35,21 +35,21 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="TextView" />
-
             <Spinner
                 android:id="@+id/id_choice_sort_list_card"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_weight="0.3"
                 android:background="@android:drawable/btn_dropdown"
                 android:entries="@array/array_sort" />
+
+            <Spinner
+                android:id="@+id/id_choice_sort_two_list_card"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:background="@android:drawable/btn_dropdown"
+                android:entries="@array/array_sort_two" />
 
         </LinearLayout>
 
@@ -67,7 +67,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="27dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9"
                 android:orientation="horizontal">
 
                 <TextView
@@ -122,7 +123,8 @@
             <ListView
                 android:id="@+id/lv_cards"
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
                 android:background="#4B457CA3" />
 
         </LinearLayout>
@@ -141,7 +143,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="29dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9"
                 android:orientation="horizontal">
 
                 <TextView
@@ -197,7 +200,8 @@
             <ListView
                 android:id="@+id/lv_deckCards"
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
                 android:background="#4B457CA3">
 
             </ListView>
