--- a/app/src/main/res/layout/terraindroitejoueur.xml
+++ b/app/src/main/res/layout/terraindroitejoueur.xml
@@ -16,6 +16,13 @@
             android:layout_height="match_parent"
             app:srcCompat="@drawable/caseterrain" />
 
+        <TextView
+            android:id="@+id/tv_nbCimetiereCardsPlayer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|center_vertical"
+            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
     </RelativeLayout>
 
 
