activation effet button depuis la main

--- a/app/src/main/res/layout/game_relative_layout.xml
+++ b/app/src/main/res/layout/game_relative_layout.xml
@@ -55,6 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.45"
                     android:text="@string/bt_activer"
+                    android:onClick="onClickActivateEffectCard"
                     android:textSize="8sp" />
 
                 <Button
